# tixent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/tixent/: __init__.py  _core.py  exceptions.py  types.py
tests/: test_core.py
